[package]
name = "tcp_test"
version = "0.1.0"
authors = ["flyq <flyq951@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
get_if_addrs = "0.5.3"
ipnet = "2.0.0"
libp2p-core = { version = "0.12.0", path = "../../core" }
log = "0.4.1"
futures = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
tokio-tcp = "0.1"

[dev-dependencies]
tokio = "0.1"
